<?xml version="1.0" encoding="UTF-8"?>
<project
	xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>fr.insee.pearljam</groupId>
	<artifactId>pearljam-back-office</artifactId>
	<version>${revision}${changelist}</version>
	<packaging>pom</packaging>
	<name>Pearl-Jam-Back-Office</name>
	<description>Back-office services for PearlJam</description>

	<properties>
		<revision>5.13.5</revision>
		<changelist></changelist>
		<java.version>21</java.version>
		<sonar.organization>inseefr</sonar.organization>
		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
	</properties>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.sonarsource.scanner.maven</groupId>
					<artifactId>sonar-maven-plugin</artifactId>
					<version>4.0.0.4121</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<modules>
        <module>domain</module>
        <module>api</module>
        <module>listener-jms</module>
	</modules>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.5.5</version>
		<relativePath /><!-- lookup parent from repository -->
	</parent>

</project>
